# phunkapp

./: package.json
src/: App.tsx  interface.ts  main.tsx  styles.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  models.rs
